# cryojax

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  imaging.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: black.yml  build_docs.yml  publish-to-pypi.yml  release.yml  ruff.yml  testing.yml
docs/: index.md  requirements.txt
docs/_static/: custom_css.css
docs/examples/: compute-potential.ipynb  cross-correlation-search.ipynb  ewald-sphere.ipynb  generate-starfile-and-mrcs.ipynb  heterogeneous_relion_dataset.star  multislice.ipynb  pose-inference.ipynb  read-dataset.ipynb  simulate-helix.ipynb  simulate-image.ipynb  simulate-micrograph.ipynb  simulate-relion-dataset.ipynb  simulating-and-reweighting-ensembles.ipynb  solvent-models.ipynb  test-multiatom.ipynb
examples/: read-dataset.ipynb  simulate-image.ipynb  simulate-micrograph.ipynb  test-multiatom.ipynb
examples/compute-potential/: index.html
examples/cross-correlation-search/: index.html
examples/data/: groel_5w0s_scattering_potential.mrc  ribosome_4ug0_micrograph.mrc  ribosome_4ug0_particles.star
examples/ewald-sphere/: index.html
examples/multislice/: index.html
examples/read-dataset/: index.html
examples/simulate-helix/: index.html
examples/simulate-image/: index.html
examples/simulate-micrograph/: index.html
examples/simulate-relion-dataset/: index.html
examples/simulating-and-reweighting-ensembles/: index.html
examples/test-multiatom/: index.html
hackathon/: scratch.ipynb
jax_2dtm/model/: coordinates.py  rotations.py  template.py
notebooks/: test-pipeline.ipynb
src/cryojax/: __init__.py  _errors.py  _filtered_transformations.py  _loop.py  core.py  types.py  typing.py
src/jax_2dtm/: __init__.py  core.py  types.py
tests/: conftest.py  requirements.txt  test_agree_with_cistem.py  test_assembly.py  test_atom_potential.py  test_atom_routines.py  test_atom_scattering.py  test_atoms_vs_voxels.py  test_backproject.py  test_ctf.py  test_density.py  test_detector.py  test_distribution.py  test_distributions.py  test_downsample.py  test_ensemble.py  test_exposure.py  test_fft.py  test_filters_and_masks.py  test_fourier_statistics.py  test_grid_search.py  test_helix.py  test_image_shape.py  test_interpolation.py  test_jaxify.py  test_jit.py  test_misc_functions.py  test_normalize.py  test_pdb_reader.py  test_pipeline.py  test_pixels_from_atoms.py  test_pose.py  test_pose_agreement.py  test_pose_marginalization.py  test_potential.py  test_projection_agreement.py  test_projection_methods.py  test_pytree_transforms.py  test_real_vs_fourier_convention.py  test_relion_data.py  (+11 more)
tests/data/: .gitignore  000000.mrcs  3j9g_potential_ps4_4.mrc  3j9g_subunit_potential_ps4_4.mrc  3jar_13pf_bfm1_ps5_28.mrc  3jar_dimer_bfm1_ps5_28.mrc  8zpm.cif  example.mrc  (+6 more)
tutorials/: fourier_insert_slice.ipynb  simulate-helix.ipynb  simulate-image.ipynb  simulate-micrograph.ipynb  test-ctf.ipynb  test-helix.ipynb  test-multiatom.ipynb  test-pipeline.ipynb  whitening_particle_stack.ipynb  wiener_filter.ipynb
(+404 files in other folders)
