[project]
name = "cryojax"
description = "Cryo-EM image simulation and analysis powered by JAX"
authors = [{ name = "Michael O'Brien", email = "michaelobrien@g.harvard.edu" }]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["jax", "equinox", "cryo-EM", "electron-microscopy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
urls = {repository = "https://github.com/mjo22/cryojax" }
dynamic = ["version"]
dependencies = [
    "jax",
    "jaxlib",
    "equinox>=0.11.0",
    "jaxtyping>=0.2.23",
    "lineax",
    "mrcfile",
    "starfile",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest", "pycistem", "gemmi"]
docs = ["mkdocs", "mkdocstrings-python", "mknotebooks", "mkdocs-material"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cryojax/cryojax_version.py"

[tool.black]
target-version = ["py310"]
line-length = 88